@startuml

title __ADAPTERS's Class Diagram__\n

  namespace fi.delektre.ringa.ring_thesis {
    namespace adapters {
      abstract class fi.delektre.ringa.ring_thesis.adapters.RecyclerViewAdapterBase {
          + items : List<T>
          + getItemCount()
          + onCreateViewHolder()
          {abstract} # onCreateItemView()
      }
    }
  }
  

  namespace fi.delektre.ringa.ring_thesis {
    namespace adapters {
      class fi.delektre.ringa.ring_thesis.adapters.SectionStatePagerAdapter {
          - mFragmentList : List<Fragment>
          - mFragmentTitleList : List<String>
          + SectionStatePagerAdapter()
          + addFragment()
          + getCount()
          + getItem()
      }
    }
  }
  

  namespace fi.delektre.ringa.ring_thesis {
    namespace adapters {
      class fi.delektre.ringa.ring_thesis.adapters.SelectorRecyclerViewAdapter {
          + buttonPosition : int
          + lineChart : LineChart
          + lineDataSetBloodPressure : LineDataSet
          + lineDataSetFluidBalance : LineDataSet
          + lineDataSetPulse : LineDataSet
          + lineDataSetTemperature1 : LineDataSet
          + lineDataSetTemperature2 : LineDataSet
          + lineDataSetsTemperatures : ArrayList<ILineDataSet>
          + mContext : Context
          + tempData : LineData
          ~ context : Context
          ~ yAxesFluid : ArrayList<Entry>
          ~ yAxesPressure : ArrayList<Entry>
          ~ yAxesPulse : ArrayList<Entry>
          ~ yAxesTemp1 : ArrayList<Entry>
          ~ yAxesTemp2 : ArrayList<Entry>
          - mSelectorOptions : ArrayList<SelectorOption>
          + initGraphsDataSets()
          + onBindViewHolder()
          # onCreateItemView()
      }
    }
  }
  

  namespace fi.delektre.ringa.ring_thesis {
    namespace adapters {
      class fi.delektre.ringa.ring_thesis.adapters.ViewWrapper {
          + ViewWrapper()
          + getView()
      }
    }
  }
  

  fi.delektre.ringa.ring_thesis.adapters.RecyclerViewAdapterBase -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  fi.delektre.ringa.ring_thesis.adapters.SectionStatePagerAdapter -up-|> androidx.fragment.app.FragmentStatePagerAdapter
  fi.delektre.ringa.ring_thesis.adapters.SelectorRecyclerViewAdapter -up-|> fi.delektre.ringa.ring_thesis.adapters.RecyclerViewAdapterBase
  fi.delektre.ringa.ring_thesis.adapters.ViewWrapper -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  fi.delektre.ringa.ring_thesis.adapters.ViewWrapper o-- V : view


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
